objects/Monitoring_Metadata_Change_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Acting_Username__c</fullName>
        <formula>IF(ISBLANK(Delegate_User__c) = false, Delegate_User__c, Username__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acting Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metadata_Change_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_User__c</fullName>
        <label>Delegate User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Acting User</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipName>Monitoring_Metadata_Change_Alerts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Environment_Name__c</fullName>
        <formula>Pipeline__r.Name &amp; &apos; - &apos; &amp; Environment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Environment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipName>Monitoring_Metadata_Change_Alerts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Acting Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Metadata Change Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Environment__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Username__c</columns>
        <columns>Delegate_User__c</columns>
        <columns>Section__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Monitoring Metadata Change Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Change Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>